--- a/SpringbootDocker/Dockerfile
+++ b/SpringbootDocker/Dockerfile
@@ -1,4 +1,4 @@
-FROM java:8
+FROM openjdk:8
 EXPOSE 8080
 ADD target/spring-docker.jar spring-docker.jar
 ENTRYPOINT ["java","-jar","/spring-docker.jar"]
